crates/teamctl-ui/tests/snapshots/snapshots__approvals_modal_120x30.snap
---
source: crates/teamctl-ui/tests/snapshots.rs
expression: s
---
⚠  approvals: 1 pending — `a` to review                                                                                 
┌AGENTS────────────────────┐┌DETAIL · writing:manager──────────────────────────────────────────────────────────────────┐
│ o  manager               ││                      (no scrollback yet — agent may be starting up)                      │
│                          ││                                                                                          │
│                          ││                                                                                          │
│                          ││                                                                                          │
│                   ┌approvals · 1/1───────────────────────────────────────────────────────────────┐                   │
│                   │#7  publish                                                                   │                   │
│                   │from: writing:manager                                                         │                   │
│                   │                                                                              │                   │
│                   │Post the morning brief to r/yourcity                                          │                   │
│                   │                                                                              │                   │
│                   │[y] approve  ·  [Shift-N] deny  ·  [j/k] cycle  ·  [Esc] close                │                   │
│                   │                                                                              │                   │
│                   │                                                                              │                   │
│                   │                                                                              │                   │
│                   │                                                                              │───────────────────┘
│                   │                                                                              │───────────────────┐
│                   │                                                                              │                   │
│                   │                                                                              │                   │
│                   │                                                                              │                   │
│                   │                                                                              │                   │
│                   │                                                                              │                   │
│                   └──────────────────────────────────────────────────────────────────────────────┘                   │
│                          ││                                                                                          │
│                          ││                                                                                          │
│                          ││                                                                                          │
└──────────────────────────┘└──────────────────────────────────────────────────────────────────────────────────────────┘
Tab cycle panes  ·  / search · ⏎ open · @ send · q quit                                              ? help · t tutorial
/fixture                                                                                           CPU 0% · RAM 0.0/0 GB
