crates/teamctl-ui/tests/snapshots/snapshots__approvals_modal_multi_row_at_2of3_120x30.snap
---
source: crates/teamctl-ui/tests/snapshots.rs
expression: s
---
⚠  approvals: 3 pendings — `a` to review                                                                                
┌AGENTS────────────────────┐┌DETAIL · writing:manager──────────────────────────────────────────────────────────────────┐
│ *  manager               ││                      (no scrollback yet — agent may be starting up)                      │
│                          ││                                                                                          │
│                          ││                                                                                          │
│                          ││                                                                                          │
│                   ┌approvals · 2/3───────────────────────────────────────────────────────────────┐                   │
│                   │#8  deploy                                                                    │                   │
│                   │from: writing:manager                                                         │                   │
│                   │                                                                              │                   │
│                   │Ship docs site to production                                                  │                   │
│                   │                                                                              │                   │
│                   │[y] approve  ·  [Shift-N] deny  ·  [j/k] cycle  ·  [Esc] close                │                   │
│                   │                                                                              │                   │
│                   │                                                                              │                   │
│                   │                                                                              │                   │
│                   │                                                                              │───────────────────┘
│                   │                                                                              │───────────────────┐
│                   │                                                                              │                   │
│                   │                                                                              │                   │
│                   │                                                                              │                   │
│                   │                                                                              │                   │
│                   │                                                                              │                   │
│                   └──────────────────────────────────────────────────────────────────────────────┘                   │
│                          ││                                                                                          │
│                          ││                                                                                          │
│                          ││                                                                                          │
└──────────────────────────┘└──────────────────────────────────────────────────────────────────────────────────────────┘
Tab cycle panes  ·  / search · ⏎ open · @ send · q quit                                              ? help · t tutorial
/fixture                                                                                           CPU 0% · RAM 0.0/0 GB
