crates/teamctl-ui/tests/snapshots/snapshots__approvals_stripe_120x30.snap
---
source: crates/teamctl-ui/tests/snapshots.rs
expression: s
---
⚠  approvals: 2 pendings — `a` to review                                                                                
┌AGENTS────────────────────┐┌DETAIL · writing:manager──────────────────────────────────────────────────────────────────┐
│ *  manager               ││                      (no scrollback yet — agent may be starting up)                      │
│                          ││                                                                                          │
│                          ││                                                                                          │
│                          ││                                                                                          │
│                          ││                                                                                          │
│                          ││                                                                                          │
│                          ││                                                                                          │
│                          ││                                                                                          │
│                          ││                                                                                          │
│                          ││                                                                                          │
│                          ││                                                                                          │
│                          ││                                                                                          │
│                          ││                                                                                          │
│                          ││                                                                                          │
│                          ││                                                                                          │
│                          │└──────────────────────────────────────────────────────────────────────────────────────────┘
│                          │┌MAILBOX───────────────────────────────────────────────────────────────────────────────────┐
│                          ││ Inbox    Channel    Wire                                                                 │
│                          ││                                         (no DMs)                                         │
│                          ││                                                                                          │
│                          ││                                                                                          │
│                          ││                                                                                          │
│                          ││                                                                                          │
│                          ││                                                                                          │
│                          ││                                                                                          │
│                          ││                                                                                          │
└──────────────────────────┘└──────────────────────────────────────────────────────────────────────────────────────────┘
Tab cycle panes  ·  / search · ⏎ open · @ send · q quit                                              ? help · t tutorial
