crates/teamctl-ui/tests/snapshots/snapshots__compose_modal_120x30.snap
---
source: crates/teamctl-ui/tests/snapshots.rs
expression: s
---
┌AGENTS────────────────────┐┌DETAIL · writing:dev1─────────────────────────────────────────────────────────────────────┐
│ o  manager               ││                      (no scrollback yet — agent may be starting up)                      │
│ o  dev1                  ││                                                                                          │
│                          ││                                                                                          │
│                          ││                                                                                          │
│                          ││                                                                                          │
│                          ││                                                                                          │
│                   ┌→ writing:dev1────────────────────────────────────────────────────────────────┐                   │
│                   │line one                                                                      │                   │
│                   │line two▏                                                                     │                   │
│                   │                                                                              │                   │
│                   │                                                                              │                   │
│                   │                                                                              │                   │
│                   │                                                                              │                   │
│                   │                                                                              │                   │
│                   │                                                                              │                   │
│                   │                                                                              │───────────────────┘
│                   │                                                                              │───────────────────┐
│                   │                                                                              │                   │
│                   │                                                                              │                   │
│                   │-- INSERT --                                                                  │                   │
│                   │Esc Enter send · Esc Esc cancel · Tab attach                                  │                   │
│                   └──────────────────────────────────────────────────────────────────────────────┘                   │
│                          ││                                                                                          │
│                          ││                                                                                          │
│                          ││                                                                                          │
│                          ││                                                                                          │
└──────────────────────────┘└──────────────────────────────────────────────────────────────────────────────────────────┘
Tab cycle panes  ·  / search · ⏎ open · @ send · q quit                                              ? help · t tutorial
/fixture                                                                                           CPU 0% · RAM 0.0/0 GB
