crates/teamctl-ui/tests/snapshots/snapshots__detail_four_split_mixed_120x30.snap
---
source: crates/teamctl-ui/tests/snapshots.rs
expression: s
---
┌AGENTS────────────────────┐┌DETAIL · writing:manager──────────────────────────────────────────────────────────────────┐
│ *  manager               ││┌ * writing:manager ─────────┐┌ * writing:dev1 ────────────┐┌ * writing:critic ──────────┐│
│ *  dev1                  │││(focus this split to stream)││(focus this split to stream)││(focus this split to stream)││
│ *  dev2                  │││                            ││                            ││                            ││
│ *  critic                │││                            ││                            ││                            ││
│                          │││                            ││                            ││                            ││
│                          │││                            ││                            ││                            ││
│                          │││                            ││                            ││                            ││
│                          │││                            │└────────────────────────────┘│                            ││
│                          │││                            │┌ * writing:dev2 ────────────┐│                            ││
│                          │││                            ││(focus this split to stream)││                            ││
│                          │││                            ││                            ││                            ││
│                          │││                            ││                            ││                            ││
│                          │││                            ││                            ││                            ││
│                          │││                            ││                            ││                            ││
│                          ││└────────────────────────────┘└────────────────────────────┘└────────────────────────────┘│
│                          │└──────────────────────────────────────────────────────────────────────────────────────────┘
│                          │┌MAILBOX───────────────────────────────────────────────────────────────────────────────────┐
│                          ││ Inbox    Sent    Channel    Wire                                                         │
│                          ││                                         (no DMs)                                         │
│                          ││                                                                                          │
│                          ││                                                                                          │
│                          ││                                                                                          │
│                          ││                                                                                          │
│                          ││                                                                                          │
│                          ││                                                                                          │
│                          ││                                                                                          │
│                          ││                                                                                          │
└──────────────────────────┘└──────────────────────────────────────────────────────────────────────────────────────────┘
Tab cycle panes  ·  / search · ⏎ open · @ send · q quit                                              ? help · t tutorial
