crates/teamctl-ui/tests/snapshots/snapshots__detail_two_horizontal_splits_120x30.snap
---
source: crates/teamctl-ui/tests/snapshots.rs
expression: s
---
┌AGENTS────────────────────┐┌DETAIL · writing:manager──────────────────────────────────────────────────────────────────┐
│ *  manager               ││┌ * writing:manager ─────────────────────────────────────────────────────────────────────┐│
│ *  dev1                  │││                              (focus this split to stream)                              ││
│                          │││                                                                                        ││
│                          │││                                                                                        ││
│                          │││                                                                                        ││
│                          │││                                                                                        ││
│                          ││└────────────────────────────────────────────────────────────────────────────────────────┘│
│                          ││┌ * writing:dev1 ────────────────────────────────────────────────────────────────────────┐│
│                          │││                              (focus this split to stream)                              ││
│                          │││                                                                                        ││
│                          │││                                                                                        ││
│                          │││                                                                                        ││
│                          ││└────────────────────────────────────────────────────────────────────────────────────────┘│
│                          │└──────────────────────────────────────────────────────────────────────────────────────────┘
│                          │┌MAILBOX───────────────────────────────────────────────────────────────────────────────────┐
│                          ││ Inbox    Channel    Wire                                                                 │
│                          ││                                         (no DMs)                                         │
│                          ││                                                                                          │
│                          ││                                                                                          │
│                          ││                                                                                          │
│                          ││                                                                                          │
│                          ││                                                                                          │
│                          ││                                                                                          │
│                          ││                                                                                          │
│                          ││                                                                                          │
│                          ││                                                                                          │
│                          ││                                                                                          │
└──────────────────────────┘└──────────────────────────────────────────────────────────────────────────────────────────┘
Tab cycle panes  ·  / search · ⏎ open · @ send · q quit                                              ? help · t tutorial
