crates/teamctl-ui/tests/snapshots/snapshots__detail_two_vertical_splits_120x30.snap
---
source: crates/teamctl-ui/tests/snapshots.rs
expression: s
---
┌AGENTS────────────────────┐┌DETAIL · writing:manager──────────────────────────────────────────────────────────────────┐
│ *  manager               ││┌ * writing:manager ────────────────────────┐┌ * writing:dev1 ───────────────────────────┐│
│ *  dev1                  │││       (focus this split to stream)        ││       (focus this split to stream)        ││
│                          │││                                           ││                                           ││
│                          │││                                           ││                                           ││
│                          │││                                           ││                                           ││
│                          │││                                           ││                                           ││
│                          │││                                           ││                                           ││
│                          │││                                           ││                                           ││
│                          │││                                           ││                                           ││
│                          │││                                           ││                                           ││
│                          │││                                           ││                                           ││
│                          │││                                           ││                                           ││
│                          │││                                           ││                                           ││
│                          │││                                           ││                                           ││
│                          ││└───────────────────────────────────────────┘└───────────────────────────────────────────┘│
│                          │└──────────────────────────────────────────────────────────────────────────────────────────┘
│                          │┌MAILBOX───────────────────────────────────────────────────────────────────────────────────┐
│                          ││ Inbox    Sent    Channel    Wire                                                         │
│                          ││                                         (no DMs)                                         │
│                          ││                                                                                          │
│                          ││                                                                                          │
│                          ││                                                                                          │
│                          ││                                                                                          │
│                          ││                                                                                          │
│                          ││                                                                                          │
│                          ││                                                                                          │
└──────────────────────────┘└──────────────────────────────────────────────────────────────────────────────────────────┘
Tab cycle panes  ·  / search · ⏎ open · @ send · q quit                                              ? help · t tutorial
/fixture                                                                                           CPU 0% · RAM 0.0/0 GB
